force-app/main/default/objects/Question__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>